// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostar el componente con la iamgen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product images"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage debe mostrar el componente correctamente con la iamgen 1`] = `
<img
  alt="Product images"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;
